--- a/Epheremal/Epheremal/Epheremal/Epheremal.csproj
+++ b/Epheremal/Epheremal/Epheremal/Epheremal.csproj
@@ -110,11 +110,23 @@
     <Compile Include="Assets\TextureProvider.cs" />
     <Compile Include="LevelParser.cs" />
     <Compile Include="Model\Behaviours\Behaviour.cs" />
+    <Compile Include="Model\Behaviours\Deadly.cs" />
+    <Compile Include="Model\Behaviours\Ethreal.cs" />
+    <Compile Include="Model\Behaviours\Harmless.cs" />
+    <Compile Include="Model\Behaviours\Invisible.cs" />
+    <Compile Include="Model\Behaviours\Jumps.cs" />
+    <Compile Include="Model\Behaviours\Move.cs" />
+    <Compile Include="Model\Behaviours\MoveAway.cs" />
+    <Compile Include="Model\Behaviours\MovePatrol.cs" />
+    <Compile Include="Model\Behaviours\MoveToward.cs" />
     <Compile Include="Model\Block.cs" />
     <Compile Include="Model\Character.cs" />
     <Compile Include="Model\Entity.cs" />
+    <Compile Include="Model\Interactions\Die.cs" />
     <Compile Include="Model\Interactions\Interaction.cs" />
+    <Compile Include="Model\Interactions\PlayerDie.cs" />
     <Compile Include="Model\Level.cs" />
+    <Compile Include="Model\NonPlayables\Goomba.cs" />
     <Compile Include="Model\NPC.cs" />
     <Compile Include="Model\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
