--- a/Epheremal/Epheremal/Epheremal/Epheremal.csproj
+++ b/Epheremal/Epheremal/Epheremal/Epheremal.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Assets\LevelParser.cs" />
     <Compile Include="Assets\TileLibrary.cs" />
     <Compile Include="Model\Behaviours\Behaviour.cs" />
+    <Compile Include="Model\Behaviours\Collectable.cs" />
     <Compile Include="Model\Behaviours\Flies.cs" />
     <Compile Include="Model\Behaviours\Deadly.cs" />
     <Compile Include="Model\Behaviours\Ethreal.cs" />
@@ -129,6 +130,7 @@
     <Compile Include="Model\Entity.cs" />
     <Compile Include="Model\Interactions\Bounce.cs" />
     <Compile Include="Model\Interactions\Collide.cs" />
+    <Compile Include="Model\Interactions\Collect.cs" />
     <Compile Include="Model\Interactions\Die.cs" />
     <Compile Include="Model\Interactions\Interaction.cs" />
     <Compile Include="Model\Interactions\InteractionBase.cs" />
@@ -137,6 +139,7 @@
     <Compile Include="Model\Level.cs" />
     <Compile Include="Model\NonPlayables\Charger.cs" />
     <Compile Include="Model\NonPlayables\Birdie.cs" />
+    <Compile Include="Model\NonPlayables\Ghost.cs" />
     <Compile Include="Model\NonPlayables\Jumper.cs" />
     <Compile Include="Model\NonPlayables\Goomba.cs" />
     <Compile Include="Model\NPC.cs" />
