--- a/Epheremal/Epheremal/Epheremal/Epheremal.csproj
+++ b/Epheremal/Epheremal/Epheremal/Epheremal.csproj
@@ -195,6 +195,9 @@
   <ItemGroup>
     <Compile Include="AnimatedTexture.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
