--- a/Epheremal/Epheremal/Epheremal/Epheremal.csproj
+++ b/Epheremal/Epheremal/Epheremal/Epheremal.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Assets\LevelParser.cs" />
     <Compile Include="Assets\TileLibrary.cs" />
     <Compile Include="Model\Behaviours\Behaviour.cs" />
+    <Compile Include="Model\Behaviours\Bouncy.cs" />
     <Compile Include="Model\Behaviours\Collectable.cs" />
     <Compile Include="Model\Behaviours\Flies.cs" />
     <Compile Include="Model\Behaviours\Deadly.cs" />
@@ -139,6 +140,7 @@
     <Compile Include="Model\Interactions\Stick.cs" />
     <Compile Include="Model\Level.cs" />
     <Compile Include="Model\NonPlayables\Bird_Block.cs" />
+    <Compile Include="Model\NonPlayables\Coin.cs" />
     <Compile Include="Model\NonPlayables\Fly_Wasp.cs" />
     <Compile Include="Model\NonPlayables\Knight_Ghost.cs" />
     <Compile Include="Model\NonPlayables\Shrom_Man.cs" />
