--- a/Epheremal/Epheremal/Epheremal/Epheremal.csproj
+++ b/Epheremal/Epheremal/Epheremal/Epheremal.csproj
@@ -128,12 +128,14 @@
     <Compile Include="Model\Behaviours\MovePatrol.cs" />
     <Compile Include="Model\Behaviours\MoveRight.cs" />
     <Compile Include="Model\Behaviours\MoveToward.cs" />
+    <Compile Include="Model\Behaviours\WinLevel.cs" />
     <Compile Include="Model\Block.cs" />
     <Compile Include="Model\Character.cs" />
     <Compile Include="Model\Entity.cs" />
     <Compile Include="Model\Interactions\Bounce.cs" />
     <Compile Include="Model\Interactions\Collide.cs" />
     <Compile Include="Model\Interactions\Collect.cs" />
+    <Compile Include="Model\Interactions\FlagAsWon.cs" />
     <Compile Include="Model\Interactions\Die.cs" />
     <Compile Include="Model\Interactions\Interaction.cs" />
     <Compile Include="Model\Interactions\InteractionBase.cs" />
@@ -142,6 +144,7 @@
     <Compile Include="Model\Level.cs" />
     <Compile Include="Model\NonPlayables\Bird_Block.cs" />
     <Compile Include="Model\NonPlayables\Coin.cs" />
+    <Compile Include="Model\NonPlayables\Door.cs" />
     <Compile Include="Model\NonPlayables\Fly_Wasp.cs" />
     <Compile Include="Model\NonPlayables\Knight_Ghost.cs" />
     <Compile Include="Model\NonPlayables\Shrom_Man.cs" />
